# YoshisAcidTrip

./: .gitignore  .gitmodules  .scuba.yml  CMakeLists.txt  Dockerfile  README.md
envs/: linux.env  windows.env
include/: constants.h  miniaudio.h  types.h
include/editor/: editor.hpp  settings.hpp  style.hpp  styleEditor.hpp
include/glad/: glad.h
include/imgui/: imgui_impl_glfw.hpp  imgui_impl_opengl3.hpp  imgui_impl_opengl3_loader.hpp
include/jsystem/: frameBuffer.hpp  fs.hpp  mem.hpp  mesh.hpp  renderBatch.hpp  shader.hpp  texture.hpp  textureAnim.h  uniformBuffer.hpp  vertexBuffer.hpp  window.hpp
include/mario/: tilesetObject.hpp
include/math/: camera.hpp
include/texture/: format.hpp  loader.hpp
include/texture/formats/: common.hpp
include/zu/: screen.hpp
res/: settings.yaml
res/lng/: English.yaml  Proper English.yaml
res/plg/Test/: common.lua  deinit.hook.lua  drawUI.hook.lua  init.lua  plugin.yaml  update.hook.lua  update.lua
res/shd/: j2d.frag  j2d.vert  quad.frag  quad.vert  test.frag  test.vert
res/thm/: Cat & Frog.ini  Cat & Frog.yaml  ImGui Classic.ini  ImGui Classic.yaml  ImGui Dark.ini  ImGui Dark.yaml  Luigis Mansion.ini  Luigis Mansion.yaml  Purple Power.ini  Purple Power.yaml  Wonder.ini  Wonder.yaml
scripts/: build.sh  buildCore.sh  buildLinux.sh  buildWindows.sh  clean.sh  profileGL.sh  run.sh  runCore.sh  runNoDebug.sh  runStaticNoDebug.sh
src/: common.hpp  gladRelease.c  main.cpp
src/editor/: editor.cpp  editor.hpp  fileBrowser.cpp  fileBrowser.cpp.tmp  level.hpp  levelView.cpp  levelView.hpp  settings.cpp  settings.hpp  style.cpp  style.hpp  styleEditor.cpp  styleEditor.hpp  utils.hpp  welcome.cpp  welcome.hpp
src/fs/: conversionFile.cpp  conversionFile.hpp  convert.cpp  convert.hpp  romfs.cpp  romfs.hpp
src/glad/: gladDebug.c  gladRelease.c
src/imgui/: imgu_impl_opengl3.cpp  imgui_impl_glfw.cpp
src/jsystem/: 2d.cpp  2d.hpp  frameBuffer.cpp  frameBuffer.hpp  fs.cpp  fs.hpp  mem.cpp  mem.hpp  mesh.hpp  renderBatch.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  textureAnim.hpp  uniformBuffer.cpp  vertex.cpp  vertex.hpp  vertexBuffer.cpp  vertexBuffer.hpp  window.cpp  window.hpp
src/lua/: LuaContext.cpp  LuaContext.hpp  LuaCpp.hpp  LuaMetaObject.cpp  LuaMetaObject.hpp
src/lua/Engine/: LuaTTable.cpp
src/mario/: tilesetObject.cpp  tilesetObject.hpp
src/math/: angle.hpp  camera.hpp
src/plugin/: api.hpp  lua.cpp  lua.hpp  plugin.cpp  plugin.hpp  zip.cpp  zip.hpp
src/plugin/api/: imgui.cc
src/texture/: format.hpp  loader.cpp  loader.hpp
src/texture/formats/: common.cpp  common.hpp
src/yaml/: helper.cpp  helper.hpp
src/zu/: screen.hpp
